# shortcut_release_helper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml  workflow.yml
docker/: execute.sh
examples/: github_action.yml  template.md.jinja
shortcut_release_helper/: Cargo.toml  LICENSE
shortcut_release_helper/src/: config.rs  git.rs  main.rs  shortcut.rs  template.rs  template_utils.rs  types.rs
shortcut_release_helper/src/template/: mod.rs  utils.rs
