[package]
name = "shortcut_release_helper"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
shortcut_client = { path = "../shortcut_client" }
ansi_term = "0.12"
anyhow = { version = "1", features = ["backtrace"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
dotenvy = "0.15"
futures = "0.3"
git2 = "0.18"
governor = "0.6"
itertools = "0.11"
minijinja = "1"
lazy_static = "1"
pin-project = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
